--- a/Untitled129-checkpoint.ipynb
+++ b/Untitled129-checkpoint.ipynb
@@ -1,6 +1,73 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "#Library for Nice graphing\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import statsmodels.formula.api as sn\n",
+    "%matplotlib inline\n",
+    "\n",
+    "#Library for statistics operation\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "# Date Time library\n",
+    "from datetime import datetime\n",
+    "\n",
+    "#Machine learning Library\n",
+    "import statsmodels.api as sm\n",
+    "from sklearn import metrics\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import AdaBoostRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.svm import SVC, LinearSVC\n",
+    "from sklearn.metrics import mean_squared_error as mse\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "\n",
+    "# Ignore warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reading data into dataframe\n",
+    "credit= pd.read_csv(\"Data_problem  1.csv\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
